# design-studio-agent

./: .env  .env.example  .gitignore  README.md  backup.md  design_studio_agent-0.1.0-py3-none-any.whl  main.py  pyproject.toml  requirements.txt
deployment/: deploy.py  design_studio_agent-0.1.0-py3-none-any.whl  test_deployment.py
design_studio_agent/: .env  __init__.py  agent.py  callbacks.py  config.py  prompt.py  prompts.py  requirements.txt
design_studio_agent/sub_agents/gcs_agent/: __init__.py  agent.py  config.py  prompts.py  tools.py
design_studio_agent/sub_agents/image_edit_agent/: __init__.py  agent.py  callbacks.py  config.py  prompts.py  tools.py  utils.py
design_studio_agent/sub_agents/image_editing_agent/: agent.py  callbacks.py  config.py  prompts.py  tools.py
design_studio_agent/sub_agents/image_gen_agent/: __init__.py  agent.py  agent_ddaga.py  callbacks.py  callbacks_ddaga.py  config.py  prompts.py  tools.py  tools_ddaga.py
design_studio_agent/tools/: auth_handler.py  gcs_tools.py  image_editor.py  image_generator.py  kenra_brand_guidelines.txt  sku_database.json  utils.py
