[project]
name = "design-studio-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "google-adk>=1.17.0",
    "google-cloud-storage>=2.19.0",
    "levenshtein>=0.27.3",
    "pillow>=12.0.0",
]
