[project]
name = "design-studio-agent"
version = "0.1.0"
description = "Agent to generate new images and edit existing ones."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "fuzzywuzzy>=0.18.0",
    "google-adk>=1.21.0",
    "google-cloud-aiplatform[agent-engines]>=1.129.0",
    "google-cloud-iam>=2.20.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.55.0",
    "levenshtein>=0.27.3",
    "pillow>=12.0.0",
    "thefuzz>=0.22.1",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "design_studio_agent"
module-root = ""
